--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -85,18 +85,20 @@ h6 {
         margin: auto !important;
     }
     .col-md-12 .display-3 {
+        width: 48% !important;
         display: flex;
         flex-wrap: wrap;
         text-align: center;
         line-height: 50px !important;
         justify-content: center;
         margin-left: 5px !important;
+        font-size: 30px !important;
     }
     .subtext-header {
         width: 50%;
         height: auto;
         font-size: 20px !important;
-        margin-top: 10px !important;
+        margin-top: -15px !important;
         margin-left: -5px!important;
         flex-wrap: wrap;
         text-align: center;
@@ -143,7 +145,7 @@ h6 {
     .text-right__1 p {
         font-size: 30px !important;
         margin-left: 0!important;
-        line-height: 40px;
+        line-height: 50px;
         flex-wrap: wrap;
         margin-top: 10px !important;
     }
@@ -337,7 +339,7 @@ h6 {
     }
     .swiper-slide__image1 img {
         width: 335px !important;
-        margin-left: 20px !important;
+        margin-left: 15px !important;
         margin-right: 15px !important;
     }
     .count__number2 {
@@ -871,7 +873,7 @@ h6 {
         margin-left: 30px !important;
     }
     .swiper__slide__image {
-        margin-left: 39px !important;
+        margin-left: 15px !important;
     }
     .count__number1 {
         max-width: 48px !important;
@@ -918,7 +920,7 @@ h6 {
     }
     .swiper-slide__image1 img {
         width: 400px !important;
-        margin-left: 39px !important;
+        margin-left: 15px !important;
         margin-right: 15px !important;
     }
     #pagination2 {
