--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -33,6 +33,7 @@ h6 {
 @media(max-width:575.9px) {
     .navbar-toggler:not(:disabled):not(.disabled) {
         margin-left: 250px !important;
+        margin-top: -50px;
     }
     body,
     .container-fruid {
@@ -143,11 +144,13 @@ h6 {
         margin-top: -10px !important;
     }
     .text-right__1 p {
+        width: 100% !important;
         font-size: 30px !important;
         margin-left: 0!important;
         line-height: 50px;
         flex-wrap: wrap;
         margin-top: 10px !important;
+        font-size: 25px !important;
     }
     #text__right2 {
         width: 50%;
