--- a/assets/style/eee.css
+++ b/assets/style/eee.css
@@ -1618,3 +1618,207 @@ h6 {
         margin-left: -35px !important;
     }
 }
+
+@media(width:320px) {
+    .navbar-toggler:not(:disabled):not(.disabled) {
+        margin-left: 25px !important;
+        margin-top: -50px;
+        background-color: transparent;
+        border: 1px solid #808080;
+        border-radius: .25rem;
+    }
+    body,
+    .container-fruid {
+        width: 100%;
+        height: auto;
+        margin: 0;
+        padding: 0;
+    }
+    .navbar-brand a {
+        margin-left: 15px !important;
+    }
+    .navbar-nav {
+        background-color: #8B8682;
+        height: auto !important;
+    }
+    .collapse {
+        margin-left: -300px !important;
+        margin-top: -100px !important;
+    }
+    .nav-item {
+        margin-top: 10px !important;
+    }
+    #nav-about {
+        margin-left: -325px !important;
+    }
+    .main__section,
+    .main__footer {
+        width: 100%;
+        height: auto;
+        margin: auto;
+        background: #1C1C1C !important;
+    }
+    .navbar {
+        max-width: 30% !important;
+        margin-left: 10px !important;
+        flex-wrap: wrap;
+        justify-content: center;
+    }
+    .fadeIn .col-md-12 {
+        max-width: 70% !important;
+        height: 354px !important;
+        margin-top: 199px !important;
+        margin-left: -50px !important;
+    }
+    .display-3 {
+        width: 50% !important;
+        font-size: 38px !important;
+        height: auto;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        justify-content: center;
+        margin: auto !important;
+    }
+    .col-md-12 .display-3 {
+        width: 48% !important;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        line-height: 50px !important;
+        justify-content: center;
+        margin-left: 5px !important;
+        font-size: 30px !important;
+    }
+    .subtext-header {
+        width: 50%;
+        height: auto;
+        font-size: 20px !important;
+        margin-top: -15px !important;
+        margin-left: -5px!important;
+        flex-wrap: wrap;
+        text-align: center;
+    }
+    .text__center {
+        width: 50%;
+        height: auto;
+        margin-top: 10px !important;
+        margin-left: 124px !important;
+        display: flex;
+        flex-wrap: wrap;
+        text-align: center;
+        align-items: center;
+        justify-content: center;
+    }
+    /* ====================SECTION 2================== */
+    .main__section {
+        width: 100%;
+        height: auto;
+    }
+    #container__section2 {
+        width: 100%;
+        height: auto;
+    }
+    #section2__row1 {
+        width: 100%;
+        height: auto;
+        display: block;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    .about__flex {
+        margin-left: 15px !important;
+        margin-right: 15px;
+    }
+    .text-right__1 {
+        width: 50%;
+        height: auto;
+        margin-right: 0!important;
+        display: flex;
+        margin-top: -10px !important;
+    }
+    .text-right__1 p {
+        width: 100% !important;
+        font-size: 30px !important;
+        margin-left: 0!important;
+        line-height: 50px;
+        flex-wrap: wrap;
+        margin-top: 10px !important;
+        font-size: 25px !important;
+    }
+    #text__right2 {
+        width: 50%;
+        height: auto !important;
+        display: flex;
+        font-size: 20px !important;
+        margin-top: -20px !important;
+        line-height: 40px !important;
+    }
+    .text-right__2 p {
+        width: 58% !important;
+        font-size: 20px !important;
+        margin-top: 10px !important;
+    }
+    .right__front__image {
+        width: 48% !important;
+        margin-top: 15px !important;
+        margin: auto;
+    }
+    .right__behind__image {
+        width: 47% !important;
+        margin-top: 10px;
+    }
+    /* ======== */
+    #section2__row2 {
+        width: 100% !important;
+        height: auto;
+        display: block !important;
+        justify-content: center;
+        text-align: center;
+        align-items: center;
+    }
+    #text__left1 {
+        margin-top: 460px !important;
+        margin-left: -150px !important;
+        height: auto !important;
+        display: block;
+    }
+    #text__left2 {
+        margin-top: 470px !important;
+    }
+    .text__left__image1 {
+        width: 87% !important;
+        margin-left: 21px!important;
+        margin: auto;
+    }
+    .text__left__image2 {
+        width: 93% !important;
+        margin: auto;
+    }
+    .our__flex {
+        margin-right: 5px !important;
+        margin-top: -30px !important;
+    }
+    .text-left__1 h2 {
+        width: 50%!important;
+        height: auto !important;
+        font-size: 25px !important;
+        line-height: 40px !important;
+        margin-left: 60px;
+        margin-top: -10px !important;
+    }
+    .text-left__2 {
+        width: 50%;
+        height: auto !important;
+        flex-wrap: wrap;
+        margin-top: -25px !important;
+    }
+    .text-left__2 h3 {
+        width: 50%;
+        height: auto !important;
+        margin-left: 60px;
+        flex-wrap: wrap;
+        font-size: 20px;
+    }
+}
