--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -316,6 +316,27 @@
                 .swiper-pagination-fraction {
                     bottom: 15px !important;
                 }
+                .swiper-slide-details {
+                    top: 52.3%;
+                    left: 50%;
+                    opacity: 1
+                }
+                .swiper-slide .swiper-slide-overlay {
+                    background: rgba(0, 0, 0, 0.7);
+                    position: absolute;
+                    width: 480px !important;
+                    height: 682px !important;
+                    left: 0;
+                    top: 0;
+                    bottom: 0;
+                    right: 0;
+                    -webkit-transition: all 0.4s ease-in-out 0s;
+                    -moz-transition: all 0.4s ease-in-out 0s;
+                    transition: all 0.4s ease-in-out 0s
+                }
+                .swiper-slide-overlay {
+                    opacity: 1 !important;
+                }
                 /* ======================SECTION5================ */
                 #container__section5 {
                     margin-top: -10px !important;
@@ -378,13 +399,6 @@
                     margin: 0;
                     padding: 0;
                 }
-                /* .navbar-toggler:not(:disabled):not(.disabled) {
-            margin-left: 270px !important;
-            margin-top: -50px;
-            background-color: transparent !important;
-            border: 1px solid #808080 !important;
-            border-radius: .25rem !important;
-        } */
                 .navbar-nav {
                     background-color: #8B8682;
                     height: auto !important;
@@ -892,7 +906,7 @@
                     opacity: 1
                 }
                 .swiper-slide .swiper-slide-overlay {
-                    background: rgba(0, 0, 0, 0.7) !important;
+                    background: rgba(0, 0, 0, 0.7);
                     position: absolute;
                     width: 480px !important;
                     height: 682px !important;
@@ -900,10 +914,12 @@
                     top: 0;
                     bottom: 0;
                     right: 0;
-                    opacity: 0;
                     -webkit-transition: all 0.4s ease-in-out 0s;
                     -moz-transition: all 0.4s ease-in-out 0s;
                     transition: all 0.4s ease-in-out 0s
+                }
+                .swiper-slide-overlay {
+                    opacity: 1 !important;
                 }
                 /* =============SECTION5============= */
                 .container__section5__title {
