--- a/assets/style/responsive.css
+++ b/assets/style/responsive.css
@@ -337,6 +337,12 @@
                 .swiper-slide-overlay {
                     opacity: 1 !important;
                 }
+                .swiper-slide-title {
+                    width: 100% !important;
+                    font-size: 40px !important;
+                    margin: auto !important;
+                    margin-left: 15px !important;
+                }
                 /* ======================SECTION5================ */
                 #container__section5 {
                     margin-top: -10px !important;
