--- a/assets/style/foptimal.css
+++ b/assets/style/foptimal.css
@@ -973,8 +973,7 @@
                                                                 height: 72px !important;
                                                                 padding-top: 20px!important;
                                                             }
-                                                            
-                                                            .swiper-pagination-bullet-active {
+                                                            /* .swiper-pagination-bullet-active {
                                                                 width: 20px !important;
                                                                 height: 20px !important;
                                                                 background: none !important;
@@ -985,6 +984,7 @@
                                                                 opacity: 1;
                                                                 transition: transform 250ms ease-in;
                                                             }
+                                                             */
                                                             
                                                             .swiper-container {
                                                                 overflow: visible !important;
@@ -993,7 +993,7 @@
                                                             .count__number1 {
                                                                 width: 48px;
                                                                 height: 36px;
-                                                                margin-top: -180px;
+                                                                margin-top: -27px;
                                                                 margin-left: 1172px;
                                                                 font-family: 'Poppins', sans-serif;
                                                                 font-family: 'Poppins', sans-serif;
@@ -1014,16 +1014,9 @@
                                                                 counter-increment: num;
                                                             }
                                                             
-                                                            #hidden__id {
-                                                                padding: 0;
-                                                                margin-left: -50px !important;
-                                                            }
-                                                            
                                                             .swiper-pagination-bullet {
                                                                 width: 9px !important;
                                                                 height: 9px !important;
-                                                                margin-top: -5px !important;
-                                                                margin-left: 16px !important;
                                                                 background: #FFFFFF !important;
                                                                 opacity: 0.3;
                                                             }
@@ -1032,9 +1025,6 @@
                                                                 width: 9px;
                                                                 height: 9px;
                                                                 display: flex;
-                                                                padding: 0 !important;
-                                                                align-items: center;
-                                                                justify-content: center;
                                                                 background: #FFFFFF;
                                                                 text-align: left;
                                                                 opacity: 0.3;
@@ -1043,17 +1033,26 @@
                                                             .swiper-pagination-bullet-active {
                                                                 width: 24px !important;
                                                                 height: 24px !important;
-                                                                margin-top: 2px !important;
                                                                 border: 2px solid #FFFFFF !important;
                                                                 box-sizing: border-box !important;
                                                                 background: none !important;
                                                             }
                                                             
+                                                            .pagination__click {
+                                                                width: 140px;
+                                                                height: 24px;
+                                                                display: flex !important;
+                                                                margin-top: -173px;
+                                                            }
+                                                            
                                                             #pagination1 {
                                                                 width: 160px !important;
                                                                 height: 24px !important;
-                                                                margin-top: 10px !important;
-                                                                margin-left: 6px !important;
+                                                                display: flex !important;
+                                                            }
+                                                            
+                                                            .swiper-pagination-clickable .swiper-pagination-bullet {
+                                                                margin-left: 0px !important;
                                                             }
                                                             /* ================SECTION5========================= */
                                                             
@@ -1108,11 +1107,18 @@
                                                                 margin: auto;
                                                             }
                                                             
+                                                            .pagination__click2 {
+                                                                width: 140px !important;
+                                                                height: 24px !important;
+                                                                margin-top: -50px !important;
+                                                                display: flex;
+                                                            }
+                                                            
                                                             #pagination2 {
                                                                 width: 160px !important;
                                                                 height: 24px !important;
-                                                                margin-top: 10px !important;
-                                                                margin-left: 6px !important;
+                                                                margin-top: 143px !important;
+                                                                display: flex;
                                                             }
                                                             
                                                             .swiper-container {
@@ -1128,7 +1134,7 @@
                                                             .count__number2 {
                                                                 width: 48px !important;
                                                                 height: 36px !important;
-                                                                margin-top: -36px !important;
+                                                                margin-top: 113px !important;
                                                                 margin-left: 1172px !important;
                                                                 font-family: 'Poppins', sans-serif;
                                                                 font-style: normal;
